--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.3",
     "ip": "^1.1.5",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   }
