--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "Projeto@1",
-    "database": "database_development",
+    "password": "teste",
+    "database": "orcamento_familiar",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
