O servidor não estava conectando, havia um problema na chamada do USERNAME, que foi corrigida e outros detalhes menores que apareceram. Servidor em funcionamento, conectado com BD.

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": "teste",
+    "password": "Mecatronico225.",
     "database": "orcamento_familiar",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql2"
   },
   "test": {
     "username": "root",
